--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ body.offcanvas {
     -o-transform: translateX(0);
     transform: translateX(0);
     width: 300px;
-    background-color: #D8EE59;
+    background-color: #599CEE;
     z-index: 999;
     position: fixed; }
   body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
