--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ figure {
           padding: 4px; }
 #colorlib-aside .colorlib-footer h3 a
 {
-    color: #FF722C;
+    color: #ffffff;
     font-size: 18px;
 }
 #rcorners2 {
