--- a/content_writing/css/style.css
+++ b/content_writing/css/style.css
@@ -103,7 +103,7 @@ figure {
   width: 300px;
   position: fixed;
   z-index: 1001;
-  background: #FF722C;
+  background: #18467f;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
