--- a/css/style.css
+++ b/css/style.css
@@ -854,11 +854,11 @@ padding-top: 2px;}
     .progress-bar.color-3 span {
       color: #f9bf3f; }
   .progress-bar.color-4 {
-    background: #a84cb8; }
+    background: #ef875b; }
     .progress-bar.color-4:after {
-      background: #a84cb8; }
+      background: #ef875b; }
     .progress-bar.color-4 span {
-      color: #a84cb8; }
+      color: #ef875b; }
   .progress-bar.color-5 {
     background: #2fa499; }
     .progress-bar.color-5:after {
